--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2358,3 +2358,40 @@ body.dark .skill-card .rating {
         font-size: 0.75rem;
       }
     }
+
+    .back-button {
+  padding: 15px 25px;
+  border: none;
+  border-radius: 15px;
+  color: #212121;
+  background: #e8e8e8;
+  position: relative;
+  font-weight: 1000;
+  font-size: 17px;
+  box-shadow: 4px 8px 19px -3px rgba(0, 0, 0, 0.27);
+  transition: all 250ms ease;
+  overflow: hidden;
+  z-index: 1;
+  cursor: pointer;
+}
+
+.back-button::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 0;
+  border-radius: 15px;
+  background-color: #212121;
+  z-index: -1;
+  transition: width 250ms ease;
+}
+
+.back-button:hover {
+  color: #e8e8e8;
+}
+
+.back-button:hover::before {
+  width: 100%;
+}
