--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -650,7 +650,7 @@ section,
 }
 @media (max-width: 768px) {
   .hero img {
-    content: url('assets/img/hero-bg-small.jpg');
+    content: url('assets/img/hero-bg.jpg');
   }
 }
 
